crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_wide_chars.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
日 本 語 の テ ス ト  🚀

绝 对 要 测 试 一 下 中 文 换 行  with mixed
ascii.


─ ✿ working… ───────────────────────────

────────────────────────────────────────
 ○ normal                       1:1 100%
