crates/tui/tests/storybook/snapshots/app_message::compacted_block_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
──────────────────────── compacted ────────────────────────
Compacted 8 earlier turns: parser refactor, renderer
wiring, three bug fixes.

────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal
