crates/tui/tests/storybook/snapshots/app_message::compacted_block_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 8
  0   0  59 attrs=dim
  1   0  53 attrs=dim
  2   0  24 attrs=dim
  4   0  57 fg=AnsiValue(237)
  4  57   1 fg=AnsiValue(244)
  4  59   1 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  60 fg=AnsiValue(237)
  7   0  60 bg=AnsiValue(233)
