crates/tui/tests/storybook/snapshots/app_message::compaction_preview_streaming_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
───────────────────────── compacting ──────────────────────────
… 5 lines above
- Added a streaming preview block.
- Kept the final checkpoint marker separate.

# Next steps
Update stories and run focused tests.




  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
