crates/tui/tests/storybook/snapshots/app_message::compaction_preview_waiting_for_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
───────────────────────── compacting ──────────────────────────


  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
